css/style.css
@import url('https://fonts.googleapis.com/css?family=Quicksand');

body {
	text-align: center;
	font-family: 'Quicksand', sans-serif;
	background-color: black;
}

.nav-item {
	padding-left: 0.4em;
	padding-right: 0.4em;
}

.nav-link {
	color: white !important;
	font-size: 1em;
}

.nav-link:hover {
	color: rgba(223, 181, 43, 0.8) !important;
}

.active .nav-link {
	color:  rgba(223, 181, 43, 0.8) !important;
}

.link {
  color: rgba(223, 181, 43, 0.7) !important;
}

nav {
	border-bottom: 1px solid rgba(223, 181, 43, 0.4);
}

.toggler-gold .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(223, 181, 43, 0.6)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.navbar-inverse .navbar-toggler {
    border-color: rgba(223, 181, 43, 0.5);
}

.social-icon {
	padding-left: 0.3em;
	padding-right: 0.3em;
	font-size: 1.75em;
	color: rgba(223, 181, 43, 0.7);
}

.social-icon-lg {
  padding-left: 0.2em;
  padding-right: 0.2em;
  font-size: 2em;
}

.social-icon:visited {
    color: rgba(223, 181, 43, 0.7);
}

.social-icon:hover {
    color: rgba(223, 181, 43, 1);
}

.green-jumbotron {
	color: white;
	background-image: url(../img/green-jumbotron.png);
	border-bottom: 1px solid rgba(223, 181, 43, 0.4);
}

.card {
  padding: 0.3rem 1rem 1.5rem 1.5rem;
  box-shadow: 0 3px 5px rgba(223, 181, 43, 0.5);
  margin: 0 0.5rem 0.5rem;
  border-radius: 3px;
  user-select: none;
  animation: fly-in-from-left .5s 1s ease both;
  transform-origin: top left;
  height: 90%;
  color: white;
  background-color: black;
}

.card:nth-child(even){
  animation-name: fly-in-from-right;
  animation-delay: 1.1s;
 	transform-origin: top right;
}

.card-title {
	color: rgba(223, 181, 43, 0.7);
}

.gold-bright {
	color: rgba(223, 181, 43, 1);
}

.form-control {
	color: rgba(255, 255, 255, 0.8) !important;
	border-color: rgba(223, 181, 43, 0.4);
	background-color: black;
	font-family: 'Quicksand', sans-serif;
}

textarea:focus,
input[type="date"]:focus,
input[type="time"]:focus,
input[type="email"]:focus,
input[type="tel"]:focus,
input[type="text"]:focus,
input[type="email"]:focus,
input[type="tel"]:focus,
#general-message:focus,
#quote-additional:focus,
#quote-hours:focus,
#quote-event-type:focus {
	border-color: rgba(223, 181, 43, 0.7) !important;
  box-shadow: 0 1px 2px rgba(223, 181, 43, 0.5) !important;
  outline: 0 none !important;
  background-color: black !important;
}

.btn {
	color: rgba(223, 181, 43, 0.7);
	border-color: rgba(223, 181, 43, 0.7);
	background-color: black;
	margin-bottom: 20px;
	font-size: 1.11rem;
}

.btn:hover {
	color: black;
	border-color: rgba(223, 181, 43, 0.7);
	background-color: rgba(223, 181, 43, 0.7);
	cursor: pointer;
}

.btn-inverted {
	color: black;
	border-color: rgba(223, 181, 43, 0.7);
	background-color: rgba(223, 181, 43, 0.7);
}

.btn-span {
	margin: 7px 7px;
}

.card-margin {
	margin-bottom: 80px;
}

.form-control::-webkit-input-placeholder { color: rgba(255, 255, 255, 0.7); }  /* WebKit, Blink, Edge */
.form-control:-moz-placeholder { color: rgba(255, 255, 255, 0.7); }  /* Mozilla Firefox 4 to 18 */
.form-control::-moz-placeholder { color: rgba(255, 255, 255, 0.7); }  /* Mozilla Firefox 19+ */
.form-control:-ms-input-placeholder { color: rgba(255, 255, 255, 0.7); }  /* Internet Explorer 10-11 */
.form-control::-ms-input-placeholder { color: rgba(255, 255, 255, 0.7); }  /* Microsoft Edge */

.contact-success {
	display: none;
	box-shadow: 0 0 0;
}

// Disable iOS overriding styling of inputs:
input.text,
select,
textarea,
input[type="date"],
input[type="time"],
input[type="email"],
input[type="tel"],
input[type="text"],
input[type="email"],
input[type="tel"],
input[type="text"],
input[type="button"],
input[type="submit"],
.input-checkbox {
	-webkit-appearance: none !important;
	border-radius: 0 !important;
}

@keyframes fly-in-from-left {
  from {
    transform: translateY(15rem) rotate(15deg);
    opacity: 0;
  }
}

@keyframes fly-in-from-right {
  from {
    transform: translateY(15rem) rotate(-15deg);
    opacity: 0;
  }
}

#photos {
   /* Prevent vertical gaps */
   line-height: 0;
   
   -webkit-column-count: 5;
   -webkit-column-gap:   0px;
   -moz-column-count:    5;
   -moz-column-gap:      0px;
   column-count:         5;
   column-gap:           0px;
}

#photos img {
  /* Just in case there are inline attributes */
  width: 100% !important;
  height: auto !important;
  padding: 1px;
}

blockquote {
  display:block;
  background: black;
  padding: 15px 45px 15px 45px;
  margin: 0;
  position: relative;
  opacity: 80%;
  font-size: 16px;
  line-height: 1.2;
  color: white;
  text-align: center;
	border-bottom: 1px outset rgba(223, 181, 43, 0.6);
}

blockquote::before {
  content: "\201C"; /*Unicode for Left Double Quote*/
  font-family: Georgia, serif;
  font-size: 60px;
  font-weight: bold;
  color: #9C7F1E;
  position: absolute;
  left: 10px;
  top: 0px;
}

blockquote::after {
  content: "\201D"; /*Unicode for Right Double Quote*/
  font-family: Georgia, serif;
  font-size: 60px;
  font-weight: bold;
  color: #9C7F1E;
  position: absolute;
  right: 10px;
  top: 0px;
}

.carousel-force-height {
	overflow: hidden;
}

.card-force-height {
	padding-bottom: 100%; 
	margin-bottom: -100%;
}

.picker__input {
	color: rgba(255, 255, 255, 1) !important;
	border: 1px solid rgba(223, 181, 43, 0.4);
	background-color: black;
  width: 100%;
  padding: .5rem .75rem;
	font-family: 'Quicksand', sans-serif;
  font-size: 1rem;
  line-height: 1.25;
  background-image: none;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  border-radius: .25rem;
  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
}

.picker__box {
	background: black;
}

.picker {
	color: rgba(223, 181, 43, 0.7);
}

.picker--focused .picker__day--highlighted,
.picker__day--highlighted:hover,
.picker__day--infocus:hover, 
.picker__day--outfocus:hover {
	background: rgba(223, 181, 43, 0.4);
}

.picker__day--today:before,
.picker__button--today:before {
	border-top-color: rgba(223, 181, 43, 0.7);
}

.picker__weekday,
.picker__year {
	color: white;
}

.picker--focused .picker__day--selected,
.picker__day--selected,
.picker__day--selected:hover {
	background: rgba(223, 181, 43, 0.7);
	color: black;
}

.picker__button--clear, .picker__button--close, .picker__button--today {
	background: black;
	border: 1px solid black;
	color: white;
	font-weight: 300;
}

.picker__button--close:before {
	color: rgba(223, 181, 43, 0.7);
}

.picker__button--clear:before {
	border-top-color: rgba(223, 181, 43, 0.7);
}

.picker__nav--next:before, 
.picker__nav--prev:before, 
.picker__nav--next:before {
	border-right-color: rgba(223, 181, 43, 0.7);
}

.picker__nav--next:before {
	border-left-color: rgba(223, 181, 43, 0.7);
}

.picker__nav--next:hover, 
.picker__nav--prev:hover {
	background: black;
}

.picker__button--clear:hover, .picker__button--close:hover, .picker__button--today:hover {
    cursor: pointer;
    color: rgba(223, 181, 43, 0.7);
    background: black;
    border-bottom-color: black; 
}

.picker--focused .picker__list-item--highlighted, .picker__list-item--highlighted:hover, .picker__list-item:hover {
    background: rgba(223, 181, 43, 0.7);
    cursor: pointer;
    color: #000;
}

.picker__input.picker__input--active {
	border-color: rgba(223, 181, 43, 0.7);
}

.form-control[readonly] {
    background-color: black;
    opacity: 1;
}

.picker__list-item {
    border-bottom: 1px solid rgba(223, 181, 43, 0.7);
    border-top: 1px solid rgba(223, 181, 43, 0.7);
    margin-bottom: -1px;
    position: relative;
    background: black;
}

.picker__list-item--highlighted,
.picker__list-item:hover {
    border-color: rgba(223, 181, 43, 0.7);
}

.picker__list {
	background: black;
	padding: 0;
}

.picker--time .picker__button--clear {
  display: block;
  width: 100%;
  padding: 1em 1.25em;
  background: black;
  border: 0;
  font-weight: 500;
  font-size: .8em;
  color: rgba(223, 181, 43, 0.7);
}

.picker__button--clear:hover {
  background: rgba(223, 181, 43, 0.7) !important;
  border-color: rgba(223, 181, 43, 0.7) !important;
  cursor: pointer !important;
  color: black !important;
  outline: 0 !important;
}

.picker--time .picker__button--clear:focus:before, .picker--time .picker__button--clear:hover:before {
  border-color: black;
}

.selectize-input {
	background: black !important;
	color: rgba(255, 255, 255, 0.8);
	border-color: rgba(223, 181, 43, 0.4);
	text-align: left;
}

.selectize-input.focus {
	border-color: rgba(223, 181, 43, 0.5);
}

.selectize-dropdown, .selectize-input, .selectize-input input {
	background: black !important;
}

.selectize-dropdown-content {
  border: 1px solid rgba(223, 181, 43, 0.7);
}

.selectize-dropdown [data-selectable] {
    padding: 5px 0;
}

.selectize-dropdown [data-selectable]:hover {
    background: rgba(223, 181, 43, 0.7);
}

.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
    background: rgba(223, 181, 43, 0.7);
}

.footer-basic-centered {
  background-color: black;
  box-shadow: 0 1px 1px 0 rgba(223, 181, 43, 0.7);
  border-top: 1px solid rgba(223, 181, 43, 0.4);
  box-sizing: border-box;
  width: 100%;
  text-align: center;
  padding: 40px 45px 10px 45px;
  margin-top: 80px;
}

.footer-basic-centered .footer-company-motto {
  color:  rgba(223, 181, 43, 0.7);
  font-size: 24px;
  padding-bottom: 5px;
}

.footer-basic-centered .footer-company-name {
  color:  white;
  font-size: 14px;
  padding-bottom: 30px;
}

@media (max-width: 500px) {
  .green-jumbotron {
    background-image: url(../img/green-jumbotron-sm.png);
  }
}

@media (max-width: 600px) {

  .footer-basic-centered {
    padding: 35px;
  }

  .footer-basic-centered .footer-company-motto {
    font-size: 18px;
  }

  .footer-basic-centered .footer-company-name {
    font-size: 12px;
  }

}

@media (max-height:800px){
  footer { position: static; }
}

@media (max-width: 1200px) {
  #photos {
  -moz-column-count:    4;
  -webkit-column-count: 4;
  column-count:         4;
  }
}
@media (max-width: 750px) {
  #photos {
  -moz-column-count:    3;
  -webkit-column-count: 3;
  column-count:         3;
  }
}
@media (max-width: 400px) {
  #photos {
  -moz-column-count:    2;
  -webkit-column-count: 2;
  column-count:         2;
  }
}

@media (min-height: 33.875em) {
	.picker__box {
		border: 1px solid rgba(223, 181, 43, 0.7);
	}	
}

@media (min-width: 321px) {
	.jumbotron-heading {
		padding-bottom: 15px;
		font-size: 3.5rem;
	}
}

@media (min-width: 576px) {
	.jumbotron-heading {
		padding-bottom: 15px;
		font-size: 5rem;
	}
}

@media (min-width: 300px) {
	body {
		font-size: 1rem;
	}
}

@media (min-width: 600px) {
	body {
		font-size: 1.1rem;
	}
}

@media (min-width: 1000px) {
	body {
		font-size: 1.2rem;
	}
}

@media (min-width: 992px) {
	.invisible-card {
		visibility: hidden;
	}
}

